--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>branch feature1</title>
+    <title>branch feature3 or defualt branch</title>
 </head>
 <body>
-    <h1>Hellow feature1</h1>
+    <h1>Hello feature1</h1>
+    <h2>Hello master</h2>
 </body>
 </html>
